[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "3.0.0" # 与工具链匹配
borsh = { version = "1.6.0", default-features = false, features = ["derive"] } 
getrandom = { version = "0.2.17",  features = [  "custom"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }

[dev-dependencies]
litesvm = "0.9.1"
solana-client = "3.0.0"
tokio = "1.49.0"
solana-sdk = "3.0.0"


[[example]]
name = "client"
path = "examples/client.rs"
