[package]
name = "pinocchio-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = "2.1.0"
solana-program = "3.0.0"
solana-program-log = {version="1.1.0"}
solana-sdk = "3.0.0"


[lib]
crate-type = ["lib", "cdylib"]














